# langchain_agents

./: .dockerignore  .env.dist  .gitattributes  .gitconfig  .gitignore  .nbstripout  .pre-commit-config.yaml  01_basics.ipynb  02_langchain_repo.ipynb  03_rag_basics.ipynb  04_react.ipynb  05_agentic_rag.ipynb  06_langgraph_intro.ipynb  07_checkpoints.ipynb  08_memory.ipynb  09_agent_with_sql_toolkit.ipynb  1.5_rag_basics.ipynb  10_corrective_agentic_rag.ipynb  10_gmail.ipynb  10_office.ipynb  11 new_architecture.ipynb  11_plan_and_execute.ipynb  12_CPAL.ipynb  12_CodeGen.ipynb  12_conversational.ipynb  13_dialogue_with_tools.ipynb  13_multi_agents_role_play.ipynb  14_agent_with_vision.ipynb  14_gmail.ipynb  15_agent_with_vision.ipynb  15_app_generator.ipynb  15_app_generator.py  15_create_app.ipynb  16_web_voyager.ipynb  16_write_a_playwright_test.ipynb  17_constitutional.ipynb  18_agent_supervisor.ipynb  19_hierarchical_agent_teams.ipynb  1_langchain_basics.ipynb  201_feedback.ipynb  (+50 more)
.devcontainer/: devcontainer.json
internal_workshop_2025_04/: 01_01_structured_output_handout.md  01_01_structured_output_notebook.ipynb  01_01_structured_output_presentation.md  01_01_structured_output_uebungen.md  01_02_tool_calls_handout.md  01_02_tool_calls_notebook.ipynb  01_02_tool_calls_presentation.md  01_02_tool_calls_uebungen.md  01_03_modelltypen_handout.md  01_03_modelltypen_notebook.ipynb  01_03_modelltypen_presentation.md  01_03_modelltypen_uebungen.md  02_01_chaining_handout.md  02_01_chaining_notebook.ipynb  02_01_chaining_presentation.md  02_01_chaining_uebungen.md  02_02_architekturkonzepte_handout.md  02_02_architekturkonzepte_notebook.ipynb  02_02_architekturkonzepte_presentation.md  02_02_architekturkonzepte_quickstart.ipynb  02_02_architekturkonzepte_uebungen.md  02_03_state_management.ipynb  02_03_state_management_handout.md  02_03_state_management_notebook.ipynb  02_03_state_management_presentation.md  02_03_state_management_uebungen.md  03_01_vektordatenbanken_handout.md  03_01_vektordatenbanken_notebook.ipynb  03_01_vektordatenbanken_presentation.md  03_01_vektordatenbanken_uebungen.md  03_02_mcp_handout.md  03_02_mcp_notebook.ipynb  03_02_mcp_presentation.md  03_02_mcp_uebungen.md  03_03_prompt_management_handout.md  03_03_prompt_management_notebook.ipynb  03_03_prompt_management_presentation.md  03_03_prompt_management_uebungen.md  04_01_langgraph_handout.md  04_01_langgraph_notebook.ipynb  (+17 more)
services/: Tiltfile  (+1 more)
(+22 files in other folders)
